# snake_ai

./: CMakeLists.txt  README.md  snake_ai.cpp
agent/: agent.h  memory.h
board/: board.h  snake.h
common/: constants.h  type.h  utils.h
docs/: todo.txt
